SERVER-6086 linenoise handles backspace incorrectly with Korean character set  - calculateColumnPosition function return mk_wcswidth  - add fall back when mk_wcswidth return -1 on calculateColumnPosition.  - rebase mk_wcwidth.*